# para_li

./: .gitignore  .gitmodules  CMakeLists.txt
scripts/: sample.sh
src/: test_afli_para.cc
src/afli_para/: afli_node_para.h  afli_node_para_impl.h  afli_para.h  (+3 more)
weights/: books-200M-0R-0U-0D-100I-zipf-uint64-5P_2D1H2L_weights.txt  books-200M-100R-0U-0D-0I-zipf-uint64-5P_2D1H2L_weights.txt  books-200M-20R-0U-0D-80I-zipf-uint64-5P_2D1H2L_weights.txt  books-200M-5P_2D1H2L_weights.txt  books-200M-80R-0U-0D-20I-zipf-uint64-5P_2D1H2L_weights.txt  fb-200M-0R-0U-0D-100I-zipf-uint64-5P_2D1H2L_weights.txt  fb-200M-100R-0U-0D-0I-zipf-uint64-5P_2D1H2L_weights.txt  fb-200M-20R-0U-0D-80I-zipf-uint64-5P_2D1H2L_weights.txt  fb-200M-5P_2D1H2L_weights.txt  fb-200M-80R-0U-0D-20I-zipf-uint64-5P_2D1H2L_weights.txt  lognormal-200M-0R-0U-0D-100I-zipf-uint64-5P_2D1H2L_weights.txt  lognormal-200M-100R-0U-0D-0I-zipf-uint64-5P_2D1H2L_weights.txt  lognormal-200M-20R-0U-0D-80I-zipf-uint64-5P_2D1H2L_weights.txt  lognormal-200M-5P_2D1H2L_weights.txt  lognormal-200M-80R-0U-0D-20I-zipf-uint64-5P_2D1H2L_weights.txt  longitudes-200M-0R-0U-0D-100I-zipf-double-5P_2D1H2L_weights.txt  longitudes-200M-100R-0U-0D-0I-zipf-double-5P_2D1H2L_weights.txt  longitudes-200M-20R-0U-0D-80I-zipf-double-5P_2D1H2L_weights.txt  longitudes-200M-5P_2D1H2L_weights.txt  longitudes-200M-80R-0U-0D-20I-zipf-double-5P_2D1H2L_weights.txt  longlat-200M-0R-0U-0D-100I-zipf-double-5P_2D1H2L_weights.txt  longlat-200M-100R-0U-0D-0I-zipf-double-5P_2D1H2L_weights.txt  longlat-200M-20R-0U-0D-80I-zipf-double-5P_2D1H2L_weights.txt  longlat-200M-5P_2D1H2L_weights.txt  longlat-200M-80R-0U-0D-20I-zipf-double-5P_2D1H2L_weights.txt  wiki-ts-200M-100R-0U-0D-0I-zipf-uint64-5P_2D1H2L_weights.txt  wiki-ts-200M-20R-0U-0D-80I-zipf-uint64-5P_2D1H2L_weights.txt  wiki-ts-200M-5P_2D1H2L_weights.txt  wiki-ts-200M-80R-0U-0D-20I-zipf-uint64-5P_2D1H2L_weights.txt  ycsb-200M-0R-0U-0D-100I-zipf-uint64-5P_2D1H2L_weights.txt  ycsb-200M-100R-0U-0D-0I-zipf-uint64-5P_2D1H2L_weights.txt  ycsb-200M-20R-0U-0D-80I-zipf-uint64-5P_2D1H2L_weights.txt  ycsb-200M-5P_2D1H2L_weights.txt  ycsb-200M-80R-0U-0D-20I-zipf-uint64-5P_2D1H2L_weights.txt
(+29 files in other folders)
